--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "angular-material-fileupload": "^3.0.2",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
+    "rxjs-operators": "^1.1.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
