--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@angular/service-worker": "~11.1.0",
     "angular-material-fileupload": "^3.0.2",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
